<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaskBench</string>
    <string name="rb_tasks">tasks</string>
    <string name="rb_teams">teams</string>
    <string name="rb_messages">messages</string>
    <string name="rb_me">me</string>
    <string name="loginUserId">Uer Id:</string>
    <string name="loginPassword">Password：</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="registerNickname">Nickname:</string>
    <string name="registerPassword">Password:</string>
    <string name="confirmPassword">ConfirmPassword:</string>
</resources>
