<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/main_context">
    </FrameLayout>
    
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rg_bg"
        android:id="@+id/main_radiogroup"
        >
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:button="@null"
            android:checked="true"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/tasks"
            android:text="@string/rb_tasks"
            android:background="@drawable/rb_checked_bg"
            android:id="@+id/rb_tasks"
            />
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:button="@null"
            android:paddingTop="2dp"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/team"
            android:text="@string/rb_teams"
            android:background="@drawable/rb_checked_bg"
            android:id="@+id/rb_teams"
            />
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:button="@null"
            android:paddingTop="2dp"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/message"
            android:text="@string/rb_messages"
            android:background="@drawable/rb_checked_bg"
            android:id="@+id/rb_messages"
            />
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:button="@null"
            android:paddingTop="2dp"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/me"
            android:text="@string/rb_me"
            android:background="@drawable/rb_checked_bg"
            android:id="@+id/rb_me"
            />
    </RadioGroup>
    
</LinearLayout>
